--- a/MazeWeb/Components/Pages/BasicMaze.Razor
+++ b/MazeWeb/Components/Pages/BasicMaze.Razor
@@ -8,6 +8,7 @@
 <input type="text" @bind= "name" />
 
 <button @onclick="GenerateMaze">Generate Basic Maze</button>
+<p>@pathOutOfMaze</p>
 
 @code
 {
@@ -18,13 +19,10 @@
     {
         MazeCell startLocation = MazeUtilities.mazeFor(name);
 
-        if (MazeUtilities.isPathToFreedom(startLocation, pathOutOfMaze))
-        {
-            Console.WriteLine("Congratulations! You've found a way out of your labyrinth.");
-        }
-        else
-        {
-            Console.WriteLine("Sorry, but you're still stuck in your labyrinth.");
-        }
+        List<NodeLink> path = MazeUtilities.ExploreMaze(startLocation);
+        IEnumerable<string> instructions = path.Select(l => l.Label);
+        
+        pathOutOfMaze = string.Join(", ", instructions);
+
     }
 }
