--- a/MazeWeb/Components/Pages/BasicMaze.Razor
+++ b/MazeWeb/Components/Pages/BasicMaze.Razor
@@ -20,9 +20,9 @@
         MazeCell startLocation = MazeUtilities.mazeFor(name);
 
         List<NodeLink> path = MazeUtilities.ExploreMaze(startLocation);
-        IEnumerable<string> instructions = path.Select(l => l.Label);
-        
-        pathOutOfMaze = string.Join(", ", instructions);
+        IEnumerable<string> instructions = path.Select(node => $"{node.From.Id}[\"{node.From}\"]--{node.Label}-->{node.To.Id}[\"{node.To}\"]");
+        pathOutOfMaze = "graph TD\n" + string.Join("\n ", instructions);
+        Console.WriteLine(pathOutOfMaze);
 
     }
 }
